update pom for testcontainers and failsafe